<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sayayinsaga"
    tools:context=".Main3Activity_SaiyanSaga">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sayan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/raditz" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/fondoet"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Sprimero"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Ssegundo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Stercero"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Scuarto"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/e2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/naranja1"
        android:onClick="comprobar"
        android:text="@string/botones"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/fondoet"
        android:gravity="center"
        android:text="@string/subirlvl"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jugador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugador"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vidas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:text="@string/vidas"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/puntos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="332dp"
        android:text="@string/puntos"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="106dp"
        android:layout_height="21dp"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/saiyanv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/lifes3" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>